--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,379 @@
-/* Use your own code or past solution for Great Idea Web Page CSS here! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+  font-family: "Titillium Web", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Bangers", cursive;
+  letter-spacing: 1px;
+  margin-bottom: 15px;
+}
+
+/* Your code starts here! */
+
+.wrapper {
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 880px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+@media only screen and (max-width: 800px) {
+    .wrapper {
+        max-width: 800px;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .wrapper {
+        max-width: 500px;
+        padding: 0;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .mobilepaddingcontainer {
+        padding: 0 17px;
+    }
+}
+
+.box0 {
+  width: 100%;
+  padding-top: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media only screen and (max-width: 800px) {
+    .box0 {
+        width: 100%
+        display: flex;
+        flex-direction: column-reverse;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .box0 {
+        width: 100%
+        display: flex;
+        flex-direction: column-reverse;
+        padding-top: 20px;
+    }
+}
+
+nav {
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
+}
+
+@media only screen and (max-width: 800px) {
+    nav {
+        width: 100%;
+        padding: 40px 0 0 0;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    nav {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        padding: 15px 0 0 0;
+        border-bottom: 1px solid gray;
+        align-content: center;
+    }
+}
+
+nav a {
+  color: gray;
+  text-decoration: none;
+}
+
+@media only screen and (max-width: 800px) {
+    nav a {
+        font-weight: bold;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    nav a {
+        color: gray;
+        font-weight: bold;
+        text-decoration: none;
+        width: 100%;
+        padding: 18px 0;
+        border-top: 1px solid gray;
+        text-align: center;
+    }
+}
+
+nav a:hover {
+  color: black;
+}
+
+.logo {
+  display: inline-block;
+  position: relative;
+}
+
+.box1 {
+  width: 100%;
+  padding: 50px;
+  display: flex;
+  justify-content: space-between;
+}
+
+@media only screen and (max-width: 800px) {
+    .box1 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 12px 0; 
+    }
+}
+
+.buttonheader {
+  width: 48%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.circlepic {
+  width: 48%;
+}
+
+@media only screen and (max-width: 800px) {
+    .box1 .circlepic {
+        display: none; 
+    }
+}
+
+h1 {
+  font-size: 400%;
+  text-align: center;
+}
+
+button {
+  background-color: white;
+  color: black;
+  border: 1px solid #555555;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.box2 {
+  padding-top: 35px;
+  padding-bottom: 40px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+@media only screen and (max-width: 500px) {
+    .box2 {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+.box2component {
+  width: 49%;
+}
+
+@media only screen and (max-width: 500px) {
+    .box2component {
+       width: 100%;
+       padding: 18px 0; 
+    }
+}
+
+.middle-img {
+  width: 100%;
+}
+
+.box3 {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+@media only screen and (max-width: 500px) {
+    .box3 {
+        display: flex;
+        flex-direction: column;
+        margin: 15px 0;
+    }
+}
+
+.box3component {
+  padding-top: 35px;
+  padding-bottom: 40px;
+  width: 30%;
+}
+
+@media only screen and (max-width: 500px) {
+    .box3component {
+       width: 100%;
+       padding: 18px 0; 
+
+.copyright {
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 50px;
+}
+
+hr {
+    border: none;
+    height: 2px;
+    background-color: #333;
+}
+
 
 
